[package]
name = "private-amounts-utxo-example"
version = "0.1.0"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletproofs = "1.0.4"
rand = "0.6"
merlin = "1.2.0"
curve25519-dalek = "1.2.3"
byteorder = "1.3.2"
sha2 = "0.8.0"
ed25519-dalek = "0.9.1"
x25519-dalek = "0.5.2"
